<resources>
    <string name="app_name">My Own BAnk</string>
    <string name="login">Login</string>
    <string name="Banking">Banking App</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint" translatable="false">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="welcome" translatable="false">Welcome to\n Banking App..</string>
    <string name="balance" translatable="false">Cash Card</string>
    <string name="masterCard" translatable="false">Master Card</string>
    <string name="BankingApp">Banking App</string>
    <string name="CardHolder" translatable="false">MOHANAD O. ALKRUNZ</string>
    <string name="CardNumber" translatable="false">53** **** ** *875</string>
    <string name="Valid" translatable="false">Valid\nthrow</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="Withdrawal">withdrawal</string>
    <string name="deposit">deposit</string>

    <string name="Transactions">Transactions</string>
    <string name="campaigns">Campaigns</string>
    <string name="cards">Cards</string>
    <string name="accountNo">Account Number :</string>
    <string name="send_to">Send to Others</string>
    <string name="from">From : </string>
    <string name="select_an_account">Select an Account</string>
    <string name="to">To :</string>
    <string name="amount">Amount</string>
    <string name="select_amount">00.0 $</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="eXCHANGE_RATES_TO_NIS">RATES TO NIS</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="totalBalance">Total Balance</string>
    <string name="USD" translatable="false">USD</string>
    <string name="EUR" translatable="false">EUR</string>
    <string name="TUR" translatable="false">TUR</string>

    <string name="confirm">Confirm Information</string>
    <string name="near_to">Near To</string>
    <string name="pay">Pay</string>
    <string name="ibanNo">IBAN number :</string>
    <string name="fullName">Name :</string>
    <string name="AccountCurrency">Currency</string>
    <string name="Accounts">Accounts</string>
    <string name="ILS" translatable="false">ILS</string>
    <string name="userName">Full Name</string>

    <string name="mobileNo">Mobile Number</string>
    <string name="birthday">Birthday</string>
    <string name="terms"><u>I agree to terms and conditions</u></string>
    <string name="Support">Support</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="logout">Logout</string>
    <string name="required">Required</string>
    <string name="are_y_sure">Are you Sure?</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="Home">Home</string>
    <string name="Transfer">Transfer</string>
    <string name="sure">Are you sure about this operation?</string>
    <string name="not_enough">Your balance not enough to ensure this Operation</string>
    <string name="empty">An field is empty</string>
    <string name="about">Bank of Palestine (BOP) is the first and largest bank with a well-diversified branch network of 50 branches in Palestine, and a paid up capital of USD 150 million and assets of over USD 2.5 billion. Established in 1960, BOP has successfully expanded its presence and operations throughout the country and now has around 1,200 employees serving 600,000 customers. BOP has around 23% market share of deposits and loans in Palestine. Operating as a universal bank, BOP is engaged in retail, corporate, SME and Micro, and Diaspora banking operations, with the largest card processing operations in Palestine. BOP is the sole agent for issuing and acquiring Visa and MasterCard in Palestine with over 5,000 Point of Sale merchant terminals nationwide.
</string>
    <string name="about_us">About us</string>
    <string name="withdraw">Withdraw</string>
    <string name="CVV">CCV</string>
    <string name="view_all">View All</string>



    <string name="add_card">Add Card</string>
    <string name="Visa" translatable="false">Visa</string>
    <string name="bank_OfPalestine" translatable="false">Bank of Palestine</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="completed">Completed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="text">
        <item>Welcome in bank of Palestine</item>
        <item>Our services rewards you more.</item>
        <item>We continue to lead the digital</item>
    </string-array>

</resources>
