<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.RegisterActivity"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView

            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:layout_gravity="center"

            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/palestine_bank1"
          />
        <ScrollView
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/fullNAME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:inputType="text"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/accountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/accountNo"
                    android:inputType="number"
                    android:singleLine="true"/>
                <EditText
                    android:id="@+id/ibanNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ibanNo"
                    android:inputType="number"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/passWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="numberPassword"
                    android:maxLength="9"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobileNo"
                    android:inputType="number"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"/>

                <EditText

                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    android:inputType="text"
                    android:singleLine="true"/>

                <CheckBox
                    android:id="@+id/acceptance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"

                    />

                <Button
                    android:id="@+id/register"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"/>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

