<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.TransferFragment"
        android:background="#fff"
        >
    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout

            android:orientation="vertical"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp">


            <androidx.cardview.widget.CardView
                app:cardCornerRadius="13dp"
                app:cardElevation="2dp"
                android:layout_width="match_parent"
                app:cardBackgroundColor="#F3F1F1"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:textColor="#000"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_an_account"
                            android:layout_marginStart="8dp"
                            android:lines="1"
                            />
                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/accountNo"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="12dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="2dp"
                android:layout_width="match_parent"
                app:cardBackgroundColor="#F3F1F1"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to"
                            android:textColor="#000"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_an_account"
                            android:layout_marginStart="8dp"/>
                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/accountNo"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="12dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="2dp"
                android:layout_width="match_parent"
                app:cardBackgroundColor="#F3F1F1"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="12dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textColor="#000"
                        />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_amount"
                        android:layout_marginStart="8dp"
                        android:singleLine="true"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="USD"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="12dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="2dp"
                android:layout_width="match_parent"
                app:cardBackgroundColor="#F3F1F1"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="12dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="2"
                        android:ellipsize="end"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </ScrollView>
        <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/send_to"
            android:textColor="#B41C76"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>


