<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/myAccount"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#EFF0F4"
        app:cardCornerRadius="16dp"
        app:cardElevation="3dp"
        android:padding="8dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/account_name_adapter"
                    style="@style/accountType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="CURRENT ACCOUNT/EMPLOYEE SALARY"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/account_balance_adapter"
                    style="@style/information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    tools:text="$120"
                   />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:fontFamily="@font/rajdhani"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountNo"/>
                <TextView
                    android:id="@+id/account_number_adapter"
                    style="@style/information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    tools:text="4520182364200"

                   />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:fontFamily="@font/rajdhani"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ibanNo"/>
                <TextView
                    android:id="@+id/iban_number_adapter"
                    style="@style/information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    tools:text="4520182364200"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:fontFamily="@font/rajdhani"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullName"/>
                <TextView
                    android:layout_marginStart="4dp"

                    android:id="@+id/account_fullName_adapter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="4520182364200"
                  style="@style/information"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:fontFamily="@font/rajdhani"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AccountCurrency"/>
                <TextView
                    android:layout_marginStart="4dp"

                    android:id="@+id/account_type_adapter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/USD"
                   style="@style/information"/>
            </LinearLayout>



        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>