<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >

    <androidx.cardview.widget.CardView android:id="@+id/avaliable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp"
        app:cardBackgroundColor="#2E3330"
        app:cardCornerRadius="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
       >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
           >
            <LinearLayout
                android:layout_marginStart="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/balance"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end|center"
                    android:src="@drawable/logo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CardHolder"
                    android:textColor="#fff"
                    android:fontFamily="@font/rajdhani"
                    />

                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CardNumber"
                    android:textColor="#fff"
                    android:fontFamily="@font/rajdhani"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Valid"
                    android:lines="2"
                    android:textSize="6sp"
                    android:textColor="#fff"


                    />
                <TextView
                    android:gravity="center"
                    android:layout_margin="2dp"
                    android:layout_gravity="top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="12/22"
                    android:textSize="6sp"/>
                <View
                    android:layout_height="0dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_verified_user_black_24dp"/>
            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>