<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".3"
                app:layout_constraintHeight_percent=".2"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/palestine_bank1"
                app:layout_constraintBottom_toTopOf="@+id/materialCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardCornerRadius="14dp"
                app:layout_constraintBottom_toTopOf="@id/tab_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/account_number"
                        android:layout_width="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:gravity="center"
                        android:hint="@string/accountNo"
                        android:inputType="number"
                        android:maxLength="6"
                        android:singleLine="true" />

                    <EditText
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="numberPassword"
                        android:maxLength="9"
                        android:singleLine="true" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".3"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent=".1"
                android:layout_marginBottom="8dp"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                >
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_support"
                    android:text="Support"
                    />

            </com.google.android.material.tabs.TabLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B41C76"
        android:gravity="center"

        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_anchor="@id/materialCardView"
        app:layout_anchorGravity="bottom|center"

        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
